<resources>
    <string name="app_name">Snaption</string>
    <string name="app_name_styled" translatable="false">SN@PTi*N</string>
    <string name="welcome_message">Welcome to Snaption!</string>
    <string name="sub_welcome_message">Click the icon above to login</string>
    <string name="add_caption">Add a Caption</string>
    <string name="update_info">Update Information</string>
    <string name="filter_games_title">Filter by Tags</string>
    <string name="random_captions">Random Captions</string>
    <string name="caption_sets">Caption Sets</string>
    <string name="game_closed_title">This Game is Closed!</string>
    <string name="create_game_title">Creating a New Game</string>
    <string name="filter_wall">Filter Wall</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="google_login">Log in with Google</string>
    <string name="title_1">Post photos.\nThe funnier the better.</string>
    <string name="desc_1">Choose any picture from your phone to start a game.</string>
    <string name="title_2">Add captions.</string>
    <string name="desc_2">Choose from existing templates to make the best caption for the photo.</string>
    <string name="title_3">Play with friends.\nShare the memes with everyone!</string>
    <string name="desc_3">Invite friends to your game so they can caption as well. Vote for your favorite captions and the highest voted one wins!</string>
    <string name="anim_1" translatable="false">tada_image.json</string>
    <string name="anim_2" translatable="false">mail_sent.json</string>
    <string name="anim_3" translatable="false">emoji_tongue.json</string>
    <string name="anim_4" translatable="false">camera.json</string>
    <string name="game_showcase_title">This is a Game!</string>
    <string name="game_showcase_content">Click the pink button to add a caption</string>
    <string name="wall_showcase_content">Click the pink button to create your own game or
        tap on a game on the wall to view it</string>
    <string name="friends_showcase_content">Tap on the magnifying glass to add a friend
        using their full name, email, or username</string>
    <string name="create_game_showcase_title_1">Upload Image</string>
    <string name="create_game_showcase_content_1">Click the camera to choose an image to upload</string>
    <string name="create_game_showcase_title_2">Add Tags</string>
    <string name="create_game_showcase_content_2">Make your game more discoverable by adding tags</string>
    <string name="create_game_showcase_title_3">Make Private</string>
    <string name="create_game_showcase_content_3">Turn this switch on to make your game private</string>
    <string name="create_game_showcase_title_4">Add Friends</string>
    <string name="create_game_showcase_content_4">Add your friends to this game by typing their username or selecting them from your friends list.</string>
    <string name="create_game_showcase_title_5">Choose an End Date</string>
    <string name="create_game_showcase_content_5">Click the date to choose when you want your game to end</string>
    <string name="profile_showcase_title">Welcome to Your Profile</string>
    <string name="profile_showcase_content">Click the pink button to change your profile picture or username</string>
    <string name="open_drawer" translatable="false">Navigation View Open</string>
    <string name="close_drawer" translatable="false">Navigation View Closed</string>
    <string name="shared_transition" translatable="false">snaption_transition</string>
    <string name="profile_transition" translatable="false">profile_transition</string>
    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="profile_image_behavior" translatable="false">com.snaptiongame.app.presentation.view.behaviors.ProfileImageBehavior</string>
    <string name="toolbar_behavior" translatable="false">com.snaptiongame.app.presentation.view.behaviors.ToolbarScrollBehavior</string>
    <string name="fab_behavior" translatable="false">com.snaptiongame.app.presentation.view.behaviors.FABScrollBehavior</string>
    <string name="bottom_nav_behavior" translatable="false">com.snaptiongame.app.presentation.view.behaviors.BottomNavigationScrollBehavior</string>
    <string name="wall_label">Wall</string>
    <string name="friends_label">Friends</string>
    <string name="leaderboards_label">Leaderboards</string>
    <string name="settings_label">Settings</string>
    <string name="version_label">Version</string>
    <string name="log_out_label">Log Out</string>
    <string name="log_in_label">Log In</string>
    <string name="current_login">Logged in as: %1$s</string>
    <string name="date_label">End Date</string>
    <string name="tags_label">Tags</string>
    <string name="add_tags_label">Add Some Tags!</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="create_game">Create Game</string>
    <string name="flag">Flag as Inappropriate</string>
    <string name="default_caption">Be the first to caption this image!</string>
    <string name="game_open">OPEN!</string>
    <string name="game_closed">CLOSED</string>
    <string name="username">Username</string>
    <string name="undo">Undo</string>
    <string name="update_success">Username updated successfully</string>
    <string name="update_profile_picture_success">Profile picture updated successfully</string>
    <string name="try_again">Try Again</string>
    <string name="count" translatable="false">0/30</string>
    <string name="count_format" translatable="false">%1$d/30</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="find_friends">Find your friends!</string>
    <string name="phone_hint" translatable="false">Ex: (555)-444-3333</string>
    <string name="name_hint" translatable="false">Ex: Bill Johnson</string>
    <string name="email_hint" translatable="false">Ex: john@snaption.com</string>
    <string name="upload_title">Uploading New Game</string>
    <string name="upload_message">Upload in progress&#8230;</string>
    <string name="upload_complete_title">Upload Complete</string>
    <string name="upload_complete_message">Game created successfully</string>
    <string name="login_failure">Failed to log in</string>
    <string name="my_wall">My Wall</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="filter">Filter</string>
    <string name="update">Update</string>
    <string name="nothing_here">Nothing here yet!</string>
    <string name="flag_alert_game">Flag Game</string>
    <string name="ask_flag_game">Are you sure you want to flag this game? This will remove the game from your wall and can\'t be undone.</string>
    <string name="flag_alert_caption">Flag Caption</string>
    <string name="ask_flag_caption">Are you sure you want to flag this caption? This will remove the caption from your list.</string>
    <string name="clear">Clear</string>
    <string name="upvote">Upvote</string>
    <string name="upvoted">Upvoted!</string>
    <string name="upvote_fail">Failed to upvote the game</string>
    <string name="compression_error">Could not compress image</string>
    <string name="upload_error">Could not upload game</string>
    <string name="empty_caption">Nothing entered for caption.</string>
    <string name="join_snaption">Join Snaption!</string>
    <string name="fitb">Fill in the blank!</string>
    <string name="snaption_description">Compete to create the best caption for a photo by filling in the blank on a caption with the word or phrase of your choice. </string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="previous">Previous</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_success">Successfully cleared cache</string>
    <string name="clear_cache_fail">Failed to clear cache</string>
    <string name="current_size">Current Size: %1$s</string>
    <string name="back">Back</string>
    <string name="flagged">Flagged</string>
    <string name="flagged_fail">Failed to flag the game</string>
    <string name="empty_wall">Nothing here!</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="log_out_content">Are you sure you want to log out?</string>
    <string name="failed_caption_submission">Caption Submission Failed</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="add_friend_failure">Failed to add %1$s</string>
    <string name="add_friend_success">Successfully added %1$s!</string>
    <string name="remove_friend_failure">Failed to remove %1$s</string>
    <string name="remove_friend_success">Successfully removed %1$s as a friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add_friend_body">Are you sure you want to add %1$s as a friend?</string>
    <string name="remove_friend_body">Are you sure you want to remove %1$s as a friend?</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="game_notifications">Game Notifications</string>
    <string name="game_notifications_summary">Be notified when someone adds you to their game or captions yours</string>
    <string name="friend_notifications">Friend Notifications</string>
    <string name="friend_notifications_summary">Be notified when someone adds you as a friend</string>
    <string name="search">Search</string>
    <string name="search_friends">Search for friends</string>
    <string name="share">Share</string>
    <string name="game_closed_content">Would you like to create a new game with the same image?</string>
    <string name="dont_ask_again">Don\'t ask me again</string>
    <string name="create_game_content">You can always create a game from an existing one by clicking the menu above, or uploading your own from the wall!</string>
    <string name="got_it">GOT IT</string>
    <string name="posted_by">Posted by %1$s</string>
    <string name="no_captions">No Captions!</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="participants">Participants</string>
    <string name="close">Close</string>
    <plurals name="days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="hours_left">
        <item quantity="one">%d hour left</item>
        <item quantity="other">%d hours left</item>
    </plurals>
    <string name="activity">Activity</string>
    <string name="days" translatable="false">%dd</string>
    <string name="hours" translatable="false">%dh</string>
    <string name="minutes" translatable="false">%dm</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="spaces_in_name">Username cannot contain whitespace</string>
    <string name="ok" translatable="false">OK</string>
    <string name="shop_label">Shop</string>
    <string name="friend_made_game">created a new game.</string>
    <string name="friend_invited_game">invited you to a game.</string>
    <string name="captioned_game">captioned your game:</string>
    <string name="friended_you">added you as a friend.</string>
    <string name="new_facebook_friend_prefix">Your friend</string>
    <string name="new_facebook_friend_suffix">is now on Snaption as</string>
    <string name="facebook_app_id" translatable="false">359612531056210</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb359612531056210</string>
    <string name="invite_friend">Invite Friend!</string>
    <string name="is_private">Private Game</string>
</resources>