<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general"/>
    <Preference
        android:key="@string/clear_cache"
        android:title="@string/clear_cache"/>
    <Preference
        android:key="@string/log_out_label"
        android:title="@string/log_out_label"/>
    <Preference
        android:key="@string/version_label"
        android:title="@string/version_label"/>
    <Preference
        android:key="@string/give_feedback"
        android:title="@string/give_feedback"/>
    <PreferenceCategory
        android:key="@string/notifications"
        android:title="@string/notifications"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/game_notifications"
        android:title="@string/game_notifications"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/friend_notifications"
        android:title="@string/friend_notifications"/>
</PreferenceScreen>