<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/flag"
        android:checked="false"
        android:title="@string/flag"/>

    <item
        android:id="@+id/create_game"
        android:checked="false"
        android:title="@string/create_game"/>

    <item
        android:id="@+id/share"
        android:checked="false"
        android:title="@string/share_to_facebook"/>

    <item
        android:id="@+id/invite_friend_to_game"
        android:checked="false"
        android:title="@string/invite_friend"/>

    <item
        android:id="@+id/tags"
        android:icon="@drawable/ic_local_offer_white_24dp"
        android:title="@string/tags_label"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/is_private"
        android:icon="@drawable/ic_lock_white_24dp"
        android:title="@string/is_private"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/upvote"
        android:checked="false"
        android:icon="@drawable/ic_arrow_upward_white_24dp"
        android:title="@string/upvote"
        app:showAsAction="ifRoom"/>

</menu>