<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/wall"
            android:checked="false"
            android:title="@string/wall_label" />

        <item
            android:id="@+id/friends"
            android:checked="false"
            android:title="@string/friends_label" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:title="@string/profile_label" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:title="@string/settings_label" />

    </group>
</menu>