<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_friend"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/add_friend"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/remove_friend"
        android:icon="@drawable/ic_remove_circle_outline_white_24dp"
        android:orderInCategory="100"
        android:title="@string/remove_friend"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/log_out_label"
        android:visible="true"
        app:showAsAction="never"/>
</menu>