<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="48sp"/>

        <Button
            android:id="@+id/facebookLoginButtonStyled"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/facebook_button"
            android:drawableStart="@drawable/com_facebook_button_icon"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="32dp"
            android:text="@string/facebook_login"
            android:textAppearance="@style/com_facebook_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/googleSignInButtonStyled"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/google_button"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:gravity="center"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:text="@string/google_login"
            android:textAppearance="@style/com_facebook_button"
            android:textColor="@color/grey_900"
            android:textSize="16sp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>