<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/app_name"
        android:transitionName="@string/shared_transition"/>

    <TextView
        android:id="@+id/top_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/picker_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_caption"
        android:layout_marginStart="4dp"
        android:background="@null"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picker_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/picker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/picker_content"
        android:layout_marginStart="4dp"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/picker_content"
        android:layout_margin="2dp"
        android:layout_toStartOf="@+id/upvote"
        android:contentDescription="@string/flag"
        android:src="@drawable/ic_flag_grey_400_24dp"/>

    <ImageView
        android:id="@+id/upvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/picker_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_favorite_border_grey_400_24dp"/>

</RelativeLayout>
